# pvcracks

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  README.md  licenses_packages.txt  mms_dffeatures.pickle  pvvision_dffeatures.pickle  pyproject.toml  requirements.txt  setup.py  sweep.yaml
.github/workflows/: main.yml
.ipynb_checkpoints/: README-checkpoint.md
License/: license_pvcracks-vae.txt
docs/: conf.py  index.rst  requirements.txt
docs/.ipynb_checkpoints/: index-checkpoint.rst
docs/Examples/: example_VAE_rapidELprocessing.ipynb  example_download_run_model.ipynb  example_download_run_multisolsegment.ipynb  example_download_run_multisolsegment_benchmarking.ipynb  example_load_3CH-VAE.ipynb  example_load_3CH-VAE.rst  example_multisolsegment_test_images.ipynb  example_validate_pvimage.ipynb  example_xgboost.ipynb
docs/api/: modules.rst  pvcracks.MultiSolSegment.formatting.rst  pvcracks.MultiSolSegment.testing.rst  pvcracks.MultiSolSegment.training.rst  pvcracks.powerloss.rst  pvcracks.pvspice_lite.rst  pvcracks.rst  pvcracks.utils.dataset_operations.rst  pvcracks.utils.rst  pvcracks.vae.pytorch_ssim.rst  pvcracks.vae.rst
docs/data/: ELdata_module_209.csv  ELdata_module_209_VAE_analysis.csv  README.md
multi-channel/: README.md
multi-channel/formatting/: channeled_masks_flip_rotate_mirror_and_split_train_val.ipynb  get_channeled_masks.ipynb  get_masks.ipynb
multi-channel/testing/: paper_figures.ipynb  show_multiclass.ipynb  test_model.ipynb  test_retrained_model_new_images.ipynb  test_visualize_results.ipynb
multi-channel/training/: different_segmentation_models.ipynb  hamlet_statistical.ipynb  modelhandler_retrain.ipynb  split_train_val.ipynb  train_channeled_unet_no_empty.ipynb  train_channeled_wandb.ipynb  train_channeled_wandb.py  train_channeled_wandb_k_fold.ipynb  train_channeled_wandb_k_fold.py  train_channeled_wandb_k_fold_final_on_test_set.ipynb  train_channeled_wandb_k_fold_final_on_test_set_optimized.ipynb  train_four_models.ipynb  train_two_models.ipynb
multi-channel/tutorials/: unet_model.py
multi_channel/formatting/: flip_rotate_mirror.ipynb  get_channeled_masks.ipynb  get_masks.ipynb
multi_channel/testing/: paper_figures.ipynb  test_model.ipynb  test_visualize_results.ipynb
multi_channel/training/: different_segmentation_models.ipynb  modelhandler_retrain.ipynb  old_split_train_val.ipynb  test_higher_import.ipynb  train.ipynb
powerloss/: powerloss_xgboost_3CH-VAE.ipynb  xgb_model_Voc_diff_percent_3CH.pkl  xgb_model_pmpp_diff_percent_3CH.pkl
pvcracks/: __init__.py  requirements.txt
pvcracks/MultiSolSegment/: README.md  functions_MultiSolSegment.py  requirements_MultiSolSegment.txt
pvcracks/powerloss/: powerloss_functions.py  powerloss_xgboost_train_3CH-VAE.ipynb  tree_visualization_3CH.html  xgb_model_Rsh_3CH.pkl
pvcracks/pvspice_lite/: README.md  SolarCell.cp  pvspice_helper.py  pvspice_tools.py  solar_circuit.cir  solar_circuit.out  solar_circuit.txt
pvcracks/utils/: combine_datasets_cwru_lbnl_asu.py  combine_datasets_v2.py  img_functions.py  segmentation.py  train_functions.py  viz_functions.py
pvcracks/vae/: VAE_functions.py  VAE_model_1CH.py  VAE_model_3CH.py  VAE_training_1CH.py  custom_dataset.py  model_download.txt  requirements_vae.txt
retrain/: README.md  functions.py
tutorials/: notes.txt
unet_oversample_low_final_model_for_paper/: config.json
vae/: VAE_functions.py  VAE_functions_v0.py  VAE_model.py  VAE_training_newimages.py  requirements.txt
(+124 files in other folders)
