[project]
name = "pvcracks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "bokeh==3.7.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.14",
    "decorator==4.4.2",
    "docker-pycreds==0.4.0",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "filelock==3.18.0",
    "fonttools==4.57.0",
    "fsspec==2025.3.2",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "hf-xet==1.1.0",
    "huggingface-hub==0.31.1",
    "idna==3.10",
    "imageio-ffmpeg==0.6.0",
    "imageio==2.37.0",
    "imutils==0.5.4",
    "ipykernel==6.29.5",
    "ipython-pygments-lexers==1.1.1",
    "ipython==9.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.0",
    "jsonschema-specifications==2025.4.1",
    "jsonschema==4.23.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.8",
    "lazy-loader==0.4",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "matplotlib==3.10.3",
    "moviepy==1.0.3",
    "mpmath==1.3.0",
    "narwhals==1.38.2",
    "nbformat==5.10.4",
    "nbqa>=1.9.1",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "plotly==6.0.1",
    "proglog==0.1.11",
    "prompt-toolkit==3.0.51",
    "protobuf==6.30.2",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pydantic-core==2.33.2",
    "pydantic==2.11.4",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "rdkit==2025.3.1",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rpds-py==0.24.0",
    "safetensors==0.5.3",
    "scikit-image==0.25.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "sentry-sdk==2.27.0",
    "setproctitle==1.3.6",
    "setuptools==80.3.1",
    "six==1.17.0",
    "smmap==5.0.2",
    "soundfile==0.13.1",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tifffile==2025.3.30",
    "timm==1.0.15",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "wandb==0.19.11",
    "wcwidth==0.2.13",
    "xyzservices==2025.4.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "ruff>=0.13.2",
]
